@@ -57,7 +57,7 @@ public class EnhancedCheckBoxMenuItem extends JCheckBoxMenuItem
 		
 		if(OperatingSystem.hasScreenMenuBar() && shortcut != null)
 		{
-			setText(label + " (" + shortcut + ')');
+			setText(label + " ( " + shortcut + " )");
 			shortcut = null;
 		}
 		else
